refactor(IT-Cotato#185): BoardFavoriteDto 제거, BoardFavorite으로 변경